package com.tesa.app.api.dto;

public class UserDto {
}
