package com.tesa.app.core;

public class Messages {
}
