package com.tesa.app.core.entity;

public class GroupMember {
}
